--- a/src/pages/docs/guides/vue-3-vite.mdx
+++ b/src/pages/docs/guides/vue-3-vite.mdx
@@ -6,7 +6,7 @@ tool: Vue 3 and Vite
 
 ```preval installation
 tool: Vite
-script: npx create-vite-app 
+script: npm init @vitejs/app
 npmInstall: true
 ```
 
@@ -14,7 +14,7 @@ npmInstall: true
 
 ```preval setup
 dev: true
-version: compat-7
+version: latest
 ```
 
 ```preval configuration
@@ -26,7 +26,7 @@ purge:
 ```preval include
 tool: Vite
 file: ./src/index.css
-withChromiumBug: true
+create: true
 ```
 
 Finally, ensure your CSS file is being imported in your `./src/main.js` file:
