--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -255,7 +255,7 @@ When building for production, set `NODE_ENV=production` on the command line when
 NODE_ENV=production npx tailwindcss-cli@latest build ./src/tailwind.css -o ./dist/tailwind.css
 ```
 
-This will make sure Tailwind removes any unused CSS and minifies the CSS file for best performance. Read our separate guide on [optimizing for production](/docs/optimizing-for-production) to learn more.
+This will make sure Tailwind removes any unused CSS for best performance. Read our separate guide on [optimizing for production](/docs/optimizing-for-production) to learn more.
 
 
 ---
