Add link to color opacity demo repo

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -311,6 +311,9 @@ module.exports = {
 @tailwind utilities;
 ```
 
+*Note that colors defined using custom properties will not work with color opacity utilities like `bg-opacity-50` without additional configuration. See [this example repository](https://github.com/adamwathan/tailwind-css-variable-text-opacity-demo) for more information on how to make this work.*
+
+
 ---
 
 ## Generating colors
