Mention grid in order docs

--- a/src/pages/docs/order.mdx
+++ b/src/pages/docs/order.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Order"
-description: "Utilities for controlling the order of flex items."
+description: "Utilities for controlling the order of flex and grid items."
 ---
 
 import plugin from 'tailwindcss/lib/plugins/order'
@@ -11,7 +11,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `order-{order}` to render flex items in a different order than they appear in the DOM.
+Use `order-{order}` to render flex and grid items in a different order than they appear in the DOM.
 
 ```html lightBlue
 <template preview>
@@ -32,7 +32,7 @@ Use `order-{order}` to render flex items in a different order than they appear i
 
 ## Responsive
 
-To apply a flex direction utility only at a specific breakpoint, add a `{screen}:` prefix to the existing class name. For example, adding the class `md:flex-row` to an element would apply the `flex-row` utility at medium screen sizes and above.
+To apply an order utility only at a specific breakpoint, add a `{screen}:` prefix to the existing class name. For example, adding the class `md:order-last` to an element would apply the `order-last` utility at medium screen sizes and above.
 
 ```html
 <div class="flex">
