Update laravel.mdx (#703)

--- a/src/pages/docs/guides/laravel.mdx
+++ b/src/pages/docs/guides/laravel.mdx
@@ -49,7 +49,7 @@ tool: Laravel
 file: ./resources/css/app.css
 ```
 
-Next, import your stylesheet in your main Blade layout (commonly `resources/views/layouts/app.php` or similar) and add the responsive viewport meta tag if it's not already present:
+Next, import your stylesheet in your main Blade layout (commonly `resources/views/layouts/app.blade.php` or similar) and add the responsive viewport meta tag if it's not already present:
 
 ```diff-html
   <!doctype html>
