--- a/src/pages/docs/transition-property.mdx
+++ b/src/pages/docs/transition-property.mdx
@@ -49,7 +49,7 @@ module.exports = {
 }
 ```
 
-Learn more in the [variants documentation](/docs/hover-focus-and-other-states#motion-safe-v1-6-0).
+Learn more in the [variants documentation](/docs/hover-focus-and-other-states#motion-safe).
 
 ## Responsive
 
