Include .ts / .tsx for purge config (#727)

--- a/src/pages/docs/guides/nextjs.mdx
+++ b/src/pages/docs/guides/nextjs.mdx
@@ -21,8 +21,8 @@ version:
 
 ```preval configuration
 purge: 
-  - ./pages/**/*.js
-  - ./components/**/*.js
+  - ./pages/**/*.{js,ts,jsx,tsx}
+  - ./components/**/*.{js,ts,jsx,tsx}
 ```
 
 ### Include Tailwind in your CSS
