Fix typo in border-radius.mdx (#729)

--- a/src/pages/docs/border-radius.mdx
+++ b/src/pages/docs/border-radius.mdx
@@ -68,7 +68,7 @@ This is most commonly used to remove a border radius that was applied at a small
 
 ## Rounding sides separately
 
-Use `rounded-{t|r|b|l}{-size?}` to only round one side an element.
+Use `rounded-{t|r|b|l}{-size?}` to only round one side of an element.
 
 ```html emerald
 <template preview>
