--- a/src/pages/docs/presets.mdx
+++ b/src/pages/docs/presets.mdx
@@ -56,21 +56,21 @@ module.exports = {
     },
     extend: {
       flexGrow: {
-        2: '2'
-        3: '3'
+        2: '2',
+        3: '3',
       },
       zIndex: {
-        60: '60'
-        70: '70'
-        80: '80'
-        90: '90'
-        100: '100'
+        60: '60',
+        70: '70',
+        80: '80',
+        90: '90',
+        100: '100',
       },
     }
   },
   plugins: [
-    require('@tailwindcss/typography')
-    require('@tailwindcss/aspect-ratio')
+    require('@tailwindcss/typography'),
+    require('@tailwindcss/aspect-ratio'),
   ],
 }
 ```
