use array for postcss.config.js plugins (#735)

--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -82,11 +82,10 @@ npx tailwindcss init tailwindcss-config.js
 If you use a custom file name, you will need to specify it when including Tailwind as a plugin in your PostCSS configuration as well:
 
 ```js
-// postcss.config.js
 module.exports = {
-  plugins: {
-    tailwindcss: { config: './tailwindcss-config.js' },
-  },
+  plugins: [
+    require('tailwindcss')('./tailwindcss-config.js'),
+  ]
 }
 ```
 
@@ -102,10 +101,10 @@ This will generate a `postcss.config.js` file in your project that looks like th
 
 ```js
 module.exports = {
-  plugins: {
-    tailwindcss: {},
-    autoprefixer: {},
-  },
+  plugins: [
+    require('tailwindcss'),
+    require('autoprefixer'),
+  ]
 }
 ```
 
