Revert "use array for postcss.config.js plugins (#735)" (#740)
This reverts commit ae6b02d5da4c5e0a064dddc2c80d7e41610ed5d5.

--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -82,10 +82,11 @@ npx tailwindcss init tailwindcss-config.js
 If you use a custom file name, you will need to specify it when including Tailwind as a plugin in your PostCSS configuration as well:
 
 ```js
+// postcss.config.js
 module.exports = {
-  plugins: [
-    require('tailwindcss')('./tailwindcss-config.js'),
-  ]
+  plugins: {
+    tailwindcss: { config: './tailwindcss-config.js' },
+  },
 }
 ```
 
@@ -101,10 +102,10 @@ This will generate a `postcss.config.js` file in your project that looks like th
 
 ```js
 module.exports = {
-  plugins: [
-    require('tailwindcss'),
-    require('autoprefixer'),
-  ]
+  plugins: {
+    tailwindcss: {},
+    autoprefixer: {},
+  },
 }
 ```
 
