--- a/src/pages/docs/line-height.mdx
+++ b/src/pages/docs/line-height.mdx
@@ -42,7 +42,7 @@ Use the `leading-none`, `leading-tight`, `leading-snug`, `leading-normal`, `lead
     <p class="leading-relaxed text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
   <div>
-    <p class="text-sm text-gray-600">.leading-loose</p>
+    <p class="text-sm text-purple-600">.leading-loose</p>
     <p class="leading-loose text-purple-800">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quia temporibus eveniet a libero incidunt suscipit laborum, rerum accusantium modi quidem, ipsam illum quis sed voluptatum quae eum fugit earum.</p>
   </div>
 </template>
