Fix Laravel Installer link (#743)

--- a/src/pages/docs/guides/laravel.mdx
+++ b/src/pages/docs/guides/laravel.mdx
@@ -8,7 +8,7 @@ tool: Laravel Mix
 tool: Laravel
 reference:
   name: the Laravel Installer 
-  link: https://laravel.com/docs/8.x#via-laravel-installer
+  link: https://laravel.com/docs/8.x#the-laravel-installer
 script: laravel new
 npmInstall: true
 ```
