fix(docs): delete Pink in customizing-colors (ISSUE: #751) (#753)

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -236,8 +236,7 @@ module.exports = {
       gray: colors.coolGray,
       red: colors.red,
       yellow: colors.amber,
-      blue: colors.blue,
-      pink: colors.pink,
+      blue: colors.blue
     }
   }
 }
