Update position.mdx (#741)
The example scheme in "Relative" section had a little mistake: the parent component was named "Static" and not "Relative". Fixed it.

--- a/src/pages/docs/position.mdx
+++ b/src/pages/docs/position.mdx
@@ -51,7 +51,7 @@ Offsets are calculated relative to the element's normal position and the element
 <template preview>
   <div class="relative bg-rose-200 p-6">
     <div class="relative h-32 bg-rose-300 p-4 text-rose-600 font-medium">
-      <p>Static parent</p>
+      <p>Relative parent</p>
       <div class="absolute bottom-0 left-0 bg-rose-500 p-4 text-rose-50">
         <p>Absolute child</p>
       </div>
@@ -60,7 +60,7 @@ Offsets are calculated relative to the element's normal position and the element
 </template>
 
 <div class="**relative** ...">
-  <p>Static parent</p>
+  <p>Relative parent</p>
   <div class="absolute bottom-0 left-0 ...">
     <p>Absolute child</p>
   </div>
