--- a/src/pages/docs/max-width.mdx
+++ b/src/pages/docs/max-width.mdx
@@ -65,7 +65,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Responsive breakpoint
 
-The `max-w-screen-*\` classes are derived from the [`theme.screens` section](/docs/theme#screens) of your `tailwind.config.js` file.
+The `max-w-screen-*` classes are derived from the [`theme.screens` section](/docs/theme#screens) of your `tailwind.config.js` file.
 
 ```html
 <div class="max-w-screen-2xl">
@@ -79,7 +79,7 @@ The `max-w-screen-*\` classes are derived from the [`theme.screens` section](/do
 
 ### Max-Width Scale
 
-Customize Tailwind's default max-width scale for the `max-w-\*` classes in the `theme.maxWidth` section of your `tailwind.config.js` file. 
+Customize Tailwind's default max-width scale for the `max-w-*` classes in the `theme.maxWidth` section of your `tailwind.config.js` file. 
 
 ```diff-js
   // tailwind.config.js
@@ -94,7 +94,7 @@ Customize Tailwind's default max-width scale for the `max-w-\*` classes in the `
   }
 ```
 
-The `max-w-screen-*\` classes are derived from the [`theme.screens` section](/docs/theme#screens) of your `tailwind.config.js` file.
+The `max-w-screen-*` classes are derived from the [`theme.screens` section](/docs/theme#screens) of your `tailwind.config.js` file.
 
 Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
