--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -1,7 +1,7 @@
 ---
 title: Just-in-Time Mode
 shortTitle: Just-in-Time Mode
-description: A faster, more featureful on-demand engine for Tailwind CSS v2.1+.
+description: A faster, more powerful, on-demand engine for Tailwind CSS v2.1+.
 ---
 import { Heading } from '@/components/Heading'
 import { TipGood, TipBad, TipCompat } from '@/components/Tip'
