--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -172,7 +172,7 @@ This can be useful in rare situations where you need to increase specificity bec
 
 ## Known limitations
 
-This library is very close to feature parity with `tailwindcss` currently and for most projects I bet you'll find it works exactly as you'd expect.
+This new engine is very close to feature parity with `tailwindcss` currently and for most projects I bet you'll find it works exactly as you'd expect.
 
 There are a few items still on our todo list though that we are actively working on:
 
