--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -4,14 +4,14 @@ shortTitle: Just-in-Time Mode
 description: A faster, more powerful, on-demand engine for Tailwind CSS v2.1+.
 ---
 import { Heading } from '@/components/Heading'
-import { TipGood, TipBad, TipCompat } from '@/components/Tip'
+import { TipGood, TipBad, TipInfo } from '@/components/Tip'
 import { ThemeReference } from '@/components/ThemeReference'
 
 ## <Heading hidden>Overview</Heading>
 
-<TipCompat>
-  <strong>This feature is currently in preview.</strong> Preview features are not covered by semantic versioning and some details may change as we continue to refine them.
-</TipCompat>
+<TipInfo>
+  <strong className="font-semibold text-blue-900">This feature is currently in preview.</strong> Preview features are not covered by semantic versioning and some details may change as we continue to refine them.
+</TipInfo>
 
 Tailwind CSS v2.1 introduces a new just-in-time compiler for Tailwind CSS that generates your styles on-demand as you author your templates instead of generating everything in advance at initial build time.
 
