Basic background-blend-mode docs

--- a/src/pages/docs/mix-blend-mode.mdx
+++ b/src/pages/docs/mix-blend-mode.mdx
@@ -29,10 +29,10 @@ Use the `mix-blend-{mode}` utilities to control how an element's content should 
 
 ## Responsive
 
-To control the mix-blend-mode property at a specific breakpoint, add a `{screen}:` prefix to any existing mix-blend-mode utility. For example, use `md:decoration-slice` to apply the `decoration-slice` utility at only medium screen sizes and above.
+To control the mix-blend-mode property at a specific breakpoint, add a `{screen}:` prefix to any existing mix-blend-mode utility. For example, use `md:mix-blend-overlay` to apply the `mix-blend-overlay` utility at only medium screen sizes and above.
 
 ```html
-<div class="decoration-clone **md:decoration-slice** ...">
+<div class="mix-blend-multiply **md:mix-blend-overlay** ...">
   <!-- ... -->
 </div>
 ```
