Uppercase f in inline flex

--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -115,7 +115,7 @@ Use `flex` to create a block-level flex container.
 </div>
 ```
 
-## Inline flex
+## Inline Flex
 
 Use `inline-flex` to create an inline flex container.
 
