Add version badges, update release notes link

--- a/src/pages/docs/backdrop-filter.mdx
+++ b/src/pages/docs/backdrop-filter.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Filter"
 description: "Utilities for enabling and disabling backdrop filters on an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
