--- a/src/pages/docs/background-blend-mode.mdx
+++ b/src/pages/docs/background-blend-mode.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Background Blend Mode"
 description: "Utilities for controlling how an element's background image should blend with its background color."
+featureVersion: 'v2.1+'
 ---
 
 import plugin from 'tailwindcss/lib/plugins/backgroundBlendMode'
