--- a/src/pages/docs/brightness.mdx
+++ b/src/pages/docs/brightness.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Brightness"
 description: "Utilities for applying brightness filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
