--- a/src/pages/docs/contrast.mdx
+++ b/src/pages/docs/contrast.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Contrast"
 description: "Utilities for applying contrast filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
