--- a/src/pages/docs/filter.mdx
+++ b/src/pages/docs/filter.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Filter"
 description: "Utilities for enabling and disabling filters on an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
