--- a/src/pages/docs/hue-rotate.mdx
+++ b/src/pages/docs/hue-rotate.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Hue Rotate"
 description: "Utilities for applying hue-rotate filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
