--- a/src/pages/docs/isolation.mdx
+++ b/src/pages/docs/isolation.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Isolation"
 description: "Utilities for controlling whether an element should explicitly create a new stacking context."
+featureVersion: 'v2.1+'
 ---
 
 import plugin from 'tailwindcss/lib/plugins/isolation'
