--- a/src/pages/docs/saturate.mdx
+++ b/src/pages/docs/saturate.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Saturate"
 description: "Utilities for applying saturation filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
