--- a/src/pages/docs/backdrop-blur.mdx
+++ b/src/pages/docs/backdrop-blur.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Blur"
 description: "Utilities for applying backdrop blur filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
