--- a/src/pages/docs/backdrop-brightness.mdx
+++ b/src/pages/docs/backdrop-brightness.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Brightness"
 description: "Utilities for applying backdrop brightness filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
