--- a/src/pages/docs/backdrop-contrast.mdx
+++ b/src/pages/docs/backdrop-contrast.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Contrast"
 description: "Utilities for applying backdrop contrast filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
