--- a/src/pages/docs/backdrop-grayscale.mdx
+++ b/src/pages/docs/backdrop-grayscale.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Grayscale"
 description: "Utilities for applying backdrop grayscale filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
