--- a/src/pages/docs/backdrop-hue-rotate.mdx
+++ b/src/pages/docs/backdrop-hue-rotate.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Hue Rotate"
 description: "Utilities for applying backdrop hue-rotate filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
