--- a/src/pages/docs/backdrop-invert.mdx
+++ b/src/pages/docs/backdrop-invert.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Invert"
 description: "Utilities for applying backdrop invert filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
