--- a/src/pages/docs/backdrop-opacity.mdx
+++ b/src/pages/docs/backdrop-opacity.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Opacity"
 description: "Utilities for applying backdrop opacity filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
