--- a/src/pages/docs/backdrop-sepia.mdx
+++ b/src/pages/docs/backdrop-sepia.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Backdrop Sepia"
 description: "Utilities for applying backdrop sepia filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
