--- a/src/pages/docs/blur.mdx
+++ b/src/pages/docs/blur.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Blur"
 description: "Utilities for applying blur filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
