--- a/src/pages/docs/box-decoration-break.mdx
+++ b/src/pages/docs/box-decoration-break.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Box Decoration Break"
 description: "Utilities for controlling how element fragments should be rendered across multiple lines, columns, or pages."
+featureVersion: 'v2.1+'
 ---
 
 import plugin from 'tailwindcss/lib/plugins/boxDecorationBreak'
