--- a/src/pages/docs/grayscale.mdx
+++ b/src/pages/docs/grayscale.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Grayscale"
 description: "Utilities for applying grayscale filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
