--- a/src/pages/docs/invert.mdx
+++ b/src/pages/docs/invert.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Invert"
 description: "Utilities for applying invert filters to an element."
+featureVersion: 'v2.1+'
 ---
 
 import { Variants } from '@/components/Variants'
