--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -2,6 +2,7 @@
 title: Just-in-Time Mode
 shortTitle: Just-in-Time Mode
 description: A faster, more powerful, on-demand engine for Tailwind CSS v2.1+.
+featureVersion: 'v2.1+'
 ---
 import { Heading } from '@/components/Heading'
 import { TipGood, TipBad, TipInfo } from '@/components/Tip'
