--- a/src/pages/docs/mix-blend-mode.mdx
+++ b/src/pages/docs/mix-blend-mode.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Mix Blend Mode"
 description: "Utilities for controlling how an element should blend with the background."
+featureVersion: 'v2.1+'
 ---
 
 import plugin from 'tailwindcss/lib/plugins/mixBlendMode'
