Fixed typo in "Dark Mode" page (#797)

--- a/src/pages/docs/dark-mode.mdx
+++ b/src/pages/docs/dark-mode.mdx
@@ -54,7 +54,7 @@ The responsive variant needs to come first, then `dark`, then the state variant 
 
 ## Enabling for other utilities
 
-To enable the `dark` variant for other utilities, add `dark` to the the variants list for whatever utility you'd like to enable it for:
+To enable the `dark` variant for other utilities, add `dark` to the variants list for whatever utility you'd like to enable it for:
 
 ```js
 // tailwind.config.js
