--- a/src/pages/docs/backdrop-opacity.mdx
+++ b/src/pages/docs/backdrop-opacity.mdx
@@ -11,21 +11,21 @@ export const classes = {
   plugin: function () {
     return function ({ addUtilities }) {
       addUtilities({
-        '.backgrop-opacity-0': { '--tw-backdrop-opacity': 'opacity(0)'},
-        '.backgrop-opacity-5': { '--tw-backdrop-opacity': 'opacity(0.05)'},
-        '.backgrop-opacity-10': { '--tw-backdrop-opacity': 'opacity(0.1)'},
-        '.backgrop-opacity-20': { '--tw-backdrop-opacity': 'opacity(0.2)'},
-        '.backgrop-opacity-25': { '--tw-backdrop-opacity': 'opacity(0.25)'},
-        '.backgrop-opacity-30': { '--tw-backdrop-opacity': 'opacity(0.3)'},
-        '.backgrop-opacity-40': { '--tw-backdrop-opacity': 'opacity(0.4)'},
-        '.backgrop-opacity-50': { '--tw-backdrop-opacity': 'opacity(0.5)'},
-        '.backgrop-opacity-60': { '--tw-backdrop-opacity': 'opacity(0.6)'},
-        '.backgrop-opacity-70': { '--tw-backdrop-opacity': 'opacity(0.7)'},
-        '.backgrop-opacity-75': { '--tw-backdrop-opacity': 'opacity(0.75)'},
-        '.backgrop-opacity-80': { '--tw-backdrop-opacity': 'opacity(0.8)'},
-        '.backgrop-opacity-90': { '--tw-backdrop-opacity': 'opacity(0.9)'},
-        '.backgrop-opacity-95': { '--tw-backdrop-opacity': 'opacity(0.95)'},
-        '.backgrop-opacity-100': { '--tw-backdrop-opacity': 'opacity(1)'},
+        '.backdrop-opacity-0': { '--tw-backdrop-opacity': 'opacity(0)'},
+        '.backdrop-opacity-5': { '--tw-backdrop-opacity': 'opacity(0.05)'},
+        '.backdrop-opacity-10': { '--tw-backdrop-opacity': 'opacity(0.1)'},
+        '.backdrop-opacity-20': { '--tw-backdrop-opacity': 'opacity(0.2)'},
+        '.backdrop-opacity-25': { '--tw-backdrop-opacity': 'opacity(0.25)'},
+        '.backdrop-opacity-30': { '--tw-backdrop-opacity': 'opacity(0.3)'},
+        '.backdrop-opacity-40': { '--tw-backdrop-opacity': 'opacity(0.4)'},
+        '.backdrop-opacity-50': { '--tw-backdrop-opacity': 'opacity(0.5)'},
+        '.backdrop-opacity-60': { '--tw-backdrop-opacity': 'opacity(0.6)'},
+        '.backdrop-opacity-70': { '--tw-backdrop-opacity': 'opacity(0.7)'},
+        '.backdrop-opacity-75': { '--tw-backdrop-opacity': 'opacity(0.75)'},
+        '.backdrop-opacity-80': { '--tw-backdrop-opacity': 'opacity(0.8)'},
+        '.backdrop-opacity-90': { '--tw-backdrop-opacity': 'opacity(0.9)'},
+        '.backdrop-opacity-95': { '--tw-backdrop-opacity': 'opacity(0.95)'},
+        '.backdrop-opacity-100': { '--tw-backdrop-opacity': 'opacity(1)'},
       })
     }
   }
