--- a/src/pages/docs/ring-offset-width.mdx
+++ b/src/pages/docs/ring-offset-width.mdx
@@ -10,7 +10,7 @@ import { Disabling } from '@/components/Disabling'
 export const classes = {
   plugin,
   transformProperties: ({ selector, properties }) => {
-    properties['box-shadow'] = `0 0 0 var(--ring-offset-width) var(--ring-offset-color), var(--ring-shadow)`
+    properties['box-shadow'] = `0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color), var(--tw-ring-shadow)`
     return properties
   }
 }
